@@ -157,7 +157,9 @@ class Sys::IO {
   native static method faccessat : int ($dirfd : int, $pathname : string, $mode : int, $flags : int);
   
   static method eaccess_raw : int ($pathname : string, $mode : int) {
+    
     my $status = &faccessat_raw(IO->AT_FDCWD, $pathname, $mode, IO->AT_EACCESS);
+    
     return $status;
   }
   
